      considerably faster thanks to a patch provided by \I{Ivan Krylov}.

      \item The \code{merge()} method for data frames will no longer
      convert row names used for indexing using \code{I()}, which will
      lead to faster execution in cases where \code{sort = TRUE} and
      \code{all.x} and/or \code{all.y} are set to \code{TRUE}.
    }
  }

  \subsection{INSTALLATION on a UNIX-ALIKE}{
    \itemize{
      \item The minimum \command{autoconf} requirement for a maintainer
      build has been increased to \command{autoconf}\sspace{}2.72.

      \item Building the HTML (and Info) versions of the R manuals now
      requires \command{texi2any} from \I{Texinfo} 6.1 or later.

      \item Failures in building the manuals under \file{doc} now abort
      the installation, removing any file which caused the failure.
    }
  }

  \subsection{DEPRECATED AND DEFUNCT}{
    \itemize{
      \item \code{is.R()} is defunct.  Environment variable
      \env{_R_DEPRECATED_IS_R_} no longer has any effect.

      \item Deprecated (for more than 9 years!) functions
      \code{linearizeMlist}, \code{listFromMlist}, and \code{showMlist} and
      the \code{"MethodsList"} class for S4 method handling were removed
      from package \pkg{methods}.
      Deprecated functions \code{balanceMethodsList}, \code{emptyMethodsList},
      \code{inheritedSubMethodLists}, \code{insertMethod},
      \code{insertMethodInEmptyList}, \code{makeMethodsList},
      \code{mergeMethods}, \code{MethodsList}, \code{MethodsListSelect}, and
      \code{SignatureMethod} were made defunct, as were the
      \code{"MethodsList"} branches of functions \code{assignMethodsMetaData},
      \code{finalDefaultMethod}, and \code{MethodAddCoerce}.
    }
  }

  \subsection{INSTALLATION}{
    \itemize{
      \item Control of symbol visibility is now supported on macOS (the
      previous check only worked on ELF platforms).
    }
  }

  \subsection{PACKAGE INSTALLATION}{
    \itemize{
      \item .
    }
  }
